--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-nested-file-tree-ts": "^1.0.12",
     "react-scripts": "4.0.1",
     "react-toastify": "^6.2.0",
+    "react-tooltip": "^4.2.21",
     "rxjs": "^6.6.3",
     "typescript": "^4.0.3",
     "unique-names-generator": "^4.3.1",
