--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "@types/dateformat": "^3.0.1",
     "@types/marked": "^1.2.1",
     "@types/react-copy-to-clipboard": "^5.0.0",
-    "babel-plugin-transform-remove-console": "^6.9.4"
+    "babel-plugin-transform-remove-console": "^6.9.4",
+    "cypress": "^8.3.1"
   }
 }
