--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "rxjs": "^6.6.3",
     "typescript": "^4.0.3",
     "unique-names-generator": "^4.3.1",
+    "wait-on": "^6.0.0",
     "web-vitals": "^0.2.4",
     "web3": "^1.3.0",
     "web3modal": "^1.9.2"
@@ -56,8 +57,9 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "cy:run": "npx cypress run --browser chrome --record --key 583e77c5-530f-4908-9dc2-09279ef08a57",
+    "test": "yarn start & node ./node_modules/wait-on/bin/wait-on http://localhost:3000 cy:run"
   },
   "eslintConfig": {
     "extends": [
