--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.15",
     "@isomorphic-git/lightning-fs": "^4.4.0",
+    "@monaco-editor/react": "^4.2.2",
     "@prezly/react-promise-modal": "^0.2.0",
-    "@remixproject/plugin": "^0.3.20-alpha.2",
-    "@remixproject/plugin-webview": "^0.3.20-alpha.2",
+    "@remixproject/plugin": "^0.3.20",
+    "@remixproject/plugin-webview": "^0.3.20",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
