--- a/package.json
+++ b/package.json
@@ -85,6 +85,6 @@
     "@types/marked": "^1.2.1",
     "@types/react-copy-to-clipboard": "^5.0.0",
     "babel-plugin-transform-remove-console": "^6.9.4",
-    "cypress": "^8.3.1"
+    "testcafe": "^1.16.1"
   }
 }
