--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2.1
 orbs:
-  node: circleci/node@latest
+  node: circleci/node@4.7.0
   browser-tools: circleci/browser-tools@1.1.0
 jobs:
   test:
