--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.15",
-    "@isomorphic-git/lightning-fs": "^4.4.0",
     "@monaco-editor/react": "^4.2.2",
     "@prezly/react-promise-modal": "^0.2.0",
     "@remixproject/plugin": "^0.3.20",
@@ -22,7 +21,6 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.1",
     "@types/react-dom": "^17.0.1",
-    "@walletconnect/web3-provider": "^1.4.0",
     "antd": "^4.9.2",
     "async-react-confirm": "^0.1.18",
     "bootstrap": "^4.5.3",
@@ -31,7 +29,6 @@
     "diff2html": "^3.1.16",
     "global-context": "^1.1.1",
     "import-lazy": "^4.0.0",
-    "ipfs-http-client": "^48.1.2",
     "isomorphic-git": "^1.8.1",
     "marked": "^1.2.6",
     "path": "^0.12.7",
@@ -41,9 +38,6 @@
     "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^17.0.1",
     "react-fullscreen-loading": "0.0.4",
-    "react-gh-like-diff": "^2.0.2",
-    "react-nested-file-tree": "0.0.4",
-    "react-nested-file-tree-ts": "^1.0.12",
     "react-scripts": "4.0.1",
     "react-toastify": "^6.2.0",
     "react-tooltip": "^4.2.21",
@@ -51,9 +45,7 @@
     "typescript": "^4.0.3",
     "unique-names-generator": "^4.3.1",
     "wait-on": "^6.0.0",
-    "web-vitals": "^0.2.4",
-    "web3": "^1.3.0",
-    "web3modal": "^1.9.2"
+    "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "yarn start",
