--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
       - checkout
       - browser-tools/install-browser-tools
       - run:
-          command: npm run test
+          command: yarn && npm run test
       - store_test_results:
           path: /tmp/test-results
 workflows:
