--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,9 @@ jobs:
       - checkout
       - browser-tools/install-browser-tools
       - run:
+          name: Install FFMPEG
+          command: sudo apt-get install -y ffmpeg
+      - run:
           command: yarn && npm run test
       - store_test_results:
           path: /tmp/test-results
