--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,11 @@ jobs:
           name: Install FFMPEG
           command: sudo apt-get install -y ffmpeg
       - run:
-          command: yarn && npm run test
+          name: Install testcafe
+          command: npm i -g testcafe
+      - run:
+          name: run tests
+          command: testcafe
       - store_test_results:
           path: /tmp/test-results
 workflows:
