--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
           command: yarn
       - run:
           name: npm run test
-          command: testcafe
+          command: npm run test
       - store_test_results:
           path: /tmp/test-results
 workflows:
