--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,8 +16,11 @@ jobs:
           name: Install testcafe
           command: yarn
       - run:
-          name: npm run test
-          command: npm run test
+          name: npm run test alpha
+          command: npm run test:alpha-ci
+      - run:
+          name: npm run test live
+          command: npm run test:production-ci
       - store_test_results:
           path: /tmp/test-results
 workflows:
