--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,8 +15,18 @@ jobs:
           name: Install
           command: yarn
       - run:
+          name: Install FFMPEG
+          command: sudo apt-get install -y ffmpeg
+      - run:
           name: start dgit
           command: yarn start
+          background: true
+      - run:
+          name: wait on dgit
+          command: sleep 10
+      - run:
+          name: npm run test alpha
+          command: npm run test:alpha-ci
       - store_test_results:
           path: /tmp/test-results
       - store_artifacts:
