--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,6 +27,10 @@ jobs:
       - run:
           name: npm run test alpha
           command: npm run test:alpha-ci
+      - run:
+          name: npm run test live
+          command: npm run test:production-ci
+      - run: ./ci/publishIpfs
       - store_test_results:
           path: /tmp/test-results
       - store_artifacts:
