--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,8 +18,11 @@ jobs:
           name: Install FFMPEG
           command: sudo apt-get install -y ffmpeg
       - run:
+          name: build
+          command: export CI=false && yarn build 
+      - run:
           name: start dgit
-          command: yarn build && yarn start
+          command: export CI=true && yarn start
           background: true
       - run:
           name: wait on dgit
