--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.15",
     "@monaco-editor/react": "^4.2.2",
-    "@remixproject/plugin": "^0.3.20",
-    "@remixproject/plugin-webview": "^0.3.20",
+    "@remixproject/plugin": "0.3.21",
+    "@remixproject/plugin-webview": "0.3.21",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
